# TurtleBot3-trajectory-challenges

./: README.md
projet2025/models/Ball/: model.sdf
projet2025/models/robocup_3Dsim_goal/: model.sdf
trajectoire/: package.xml  setup.py
trajectoire/launch/: full_challenges.launch.py
trajectoire/trajectoire/: balle.py  challenge1.py  challenge2.py  challenge2V0.py  challenge3.py
